[project]
name = "qts-atv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=25.9.0",
    "fastapi[standard]>=0.119.1",
    "flake8>=7.3.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
]

[tool.black]
line-length = 120
